# 3Course__abandoned_database_Coursework

./: .clang-format  .gitignore  CMakeLists.txt  Common.hpp  DB_Coursework  database_manager.cpp  database_manager.hpp  database_worker.hpp  db_ui.cpp  db_ui.hpp  input_dialog.hpp  main.cpp  main_window_ui.cpp  main_window_ui.hpp  select_server_ui.cpp  select_server_ui.hpp
Libs/pqxx/: BUILDING-cmake.md  BUILDING-configure.md  CMakeLists.txt  README.md
Libs/pqxx/.circleci/: config.yml
Libs/pqxx/.github/workflows/: stale.yml
Libs/pqxx/cmake/: config.cmake
Libs/pqxx/config-tests/: README.md
Libs/pqxx/include/: CMakeLists.txt
Libs/pqxx/include/pqxx/: result
Libs/pqxx/include/pqxx/doc/: accessing-results.md  datatypes.md  escaping.md  getting-started.md  mainpage.md  performance.md  prepared-statement.md  streams.md  thread-safety.md
Libs/pqxx/include/pqxx/internal/: result_iter.hxx
Libs/pqxx/src/: CMakeLists.txt
Libs/pqxx/tools/: format  lint  m4esc.py  splitconfig  template2mak.py  test_all.py  todo
